--- a/common.css
+++ b/common.css
@@ -17,7 +17,7 @@
  	color: white;
  	background: #3498db;
  	margin: 1em;
- 	padding: 1em;
+ 	
  	width: 3em;
  	border-radius: 0.5em;
  	margin-left: auto;
@@ -518,6 +518,11 @@ img {
         font-size: 6em;
         background: none;
         padding-right: 2em;
+    }
+    
+    .tar {
+        background: orange;
+        font-size: 3em;
     }
     
 	.btn-nav {
