--- a/common.css
+++ b/common.css
@@ -363,9 +363,11 @@ img {
 @media only screen and (max-width: 70em) {
     
     
-    footer {
+   /* footer {
         margin-top: 13em;
-    }
+    }*/
+    
+    
 	.small {
 		width: 50vw;
 	}
