--- a/common-tut.css
+++ b/common-tut.css
@@ -18,6 +18,10 @@
 margin-top: 1em;    
 }
 
+.about {
+    margin-top: 1em;
+}
+
  @media (max-width: 70em){
      .tut-image {
          width: 90vw;
