--- a/common.css
+++ b/common.css
@@ -532,6 +532,8 @@ img {
         font-size: 6em;
         background: none;
         padding-right: 2em;
+         background: none;
+         
     }
     
     .tar {
