--- a/common.css
+++ b/common.css
@@ -749,7 +749,7 @@ li {
         
     .fade-in {
         animation: fade 1.2s;
-        transition: 0.6s ease-in-out;
+        transition: 0.6s;
     }
         
     @keyframes fade {
