--- a/common.css
+++ b/common.css
@@ -646,10 +646,10 @@ img {
 } 
 
 
-
+/*
 html, body {
 	overflow-x: hidden;
-}
+}*/
 */
 /*--------------------------------------------------NAVIGATION--------------------------------------------------*/
 
