--- a/common.css
+++ b/common.css
@@ -646,11 +646,11 @@ img {
 } 
 
 
-/*
+
 html, body {
 	overflow-x: hidden;
-}*/
-*/
+}
+
 /*--------------------------------------------------NAVIGATION--------------------------------------------------*/
 
 .left {
