--- a/common.css
+++ b/common.css
@@ -756,7 +756,7 @@ li {
         
         from {
             opacity: 0;
-            transform: translate3d(0,30px, 0);
+            transform: translate3d(0, 30px, 0);
         }
         
         to {
