--- a/anim.css
+++ b/anim.css
@@ -1,9 +1,18 @@
 
+.hidden {
+    opacity: 0;
+}
+
+.fade-in {
+    animation: fade 1.6s;
+    transition: 0.6s;
+}
+
 
 @keyframes fade {
     from {
         opacity: 0;
-        transform: translate3d(0, 30px, 0);
+        transform: translate3d(0, -30px, 0);
     }
 
     to {
@@ -12,11 +21,5 @@
     }
 }
 
-/*.hidden {
-    opacity: 0;
-}
-*/
-.fade-in {
-    animation: fade 1.2s;
-    transition: 0.6s;
-}
+
+
