--- a/anim.css
+++ b/anim.css
@@ -35,5 +35,11 @@
         animation: none;
     }
 }
+    
+     @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) {
+        .fade-in {
+        animation: none;
+    }
+}
 }
 
