--- a/anim.css
+++ b/anim.css
@@ -11,10 +11,10 @@
     opacity: 0;
 } 
     
-    .fade-in {
-       
-    animation: fade 1.6s;
-    transition: 1s;
+    .fade-in { 
+    animation: fade 1s;
+      transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);  
+    
 }
     
     .down:hover {
@@ -32,7 +32,7 @@
 @keyframes fade {
     from {
         opacity: 0;
-        transform: translate3d(0, 30px, 0);
+        transform: translate3d(0, 60px, 0);
     }
 
     to {
