--- a/common.css
+++ b/common.css
@@ -658,7 +658,11 @@ img {
 		font-size: 4em;
 	}
     
-    
+    .app p {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+   
 } 
 
 
