--- a/style/index-style.css
+++ b/style/index-style.css
@@ -155,7 +155,7 @@
         }
         
         footer {
-           padding-bottom: 0em;
+         /*  padding-bottom: 0em;  */
             margin-top: 10em;
         }
    
