--- a/style/design-style.css
+++ b/style/design-style.css
@@ -34,8 +34,8 @@
         }
         
         .design {
-            width: 60vw;
-            margin-left: 20vw;
+            width: 50%;
+            margin-left: 25vw;
             border-radius: 1em;
         }
         
@@ -52,6 +52,22 @@
           h3 {
             padding-bottom: 1em;
         }
+
+#center {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		
+		
+		.cent {
+			text-align: center;
+		}
+		
+		
+		.topOne {
+			padding-top: 1em;
+		}
         
         
         @media (max-device-width: 415px) {
@@ -70,6 +86,10 @@
                 font-size: 5em;
             }
         }
+
+
+
+	
         
         
       
