--- a/style/design-style.css
+++ b/style/design-style.css
@@ -1,5 +1,19 @@
 
-        .design-center {
+      
+.forty {
+    width: 40%;
+}
+
+
+body > .toCenter {
+    margin-top: 0.6em;
+}
+
+.toCenterImportant {
+    text-align: center !important;
+}
+
+.design-center {
             text-align: center;
             font-size: 2em;
             margin-top: 3em;
@@ -34,8 +48,8 @@
         }
         
         .design {
-            width: 50%;
-            margin-left: 25vw;
+            width: 40%;
+            margin-left: 30vw;
             border-radius: 1em;
         }
         
@@ -69,7 +83,19 @@
 			padding-top: 1em;
 		}
         
-        
+
+@media (max-width: 70em) {
+     .videoSide {
+        flex-direction: column;
+    }
+    
+    
+    .forty {
+        width: 90%;
+    }
+}
+
+
         @media (max-device-width: 415px) {
            
               .design {
