--- a/style/common.css
+++ b/style/common.css
@@ -4,66 +4,49 @@
 	font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
         
-
-
+#left a:hover {
+        color: #3498db;
+        text-decoration:overline;
+        transition: 0.4s ease-in-out;
+}
     
 .high {
     color: #3498db;
 }
+
 
 .tar {
  	display: block;
  	text-align: center;
  	text-decoration: none;
  	font-weight: bold;
+ 	color: white;
+ 	background: #3498db;
  	margin: 1em;
  	
  	width: 8em;
+ 	border-radius: 0.5em;
  	margin-left: auto;
  	margin-right: auto;
-
-	 background-color: white;
-	 border: none;
-	 border-radius: 8px;
-	 font-size: 1em;
-	 padding: 0.6em;
  }
 
 .tar-small {
  	width: 6em;
-    color: #000000;
+    background: none;
+    border: 3px solid #3498db;
+    color: #3498db;
  }
-
- .tar {
-    font-size: 1.5em;
-    padding: 0.3em;
-}
 
 
 .about {
-	/*font-family: 'Poppins', sans-serif;*/
-	font-family: "Arial", sans-serif;
-    color: rgb(47, 186, 188);
+    color: black;
     text-align: center;
-	text-align: left;
-	z-index: 0;
-	margin-left: -18px;
-
-	font-size: 8rem;
-
-	/*font-style: italic;
-	-webkit-text-stroke: 1px rgb(11, 122, 182);*/
-
-}
-
-
-/*Wrapper*/
-
-.aboutWrapper h2 {
-	font-family: 'Poppins';
-	font-style: italic;
-	-webkit-text-stroke: 2px rgb(11, 122, 182);
-	color: white;
+    background: linear-gradient(to bottom, #3498db, #0675bf);
+  /*  background: linear-gradient(45deg, #3498db, #);*/
+   
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size:7em;
 }
 
 #h {
@@ -102,7 +85,9 @@
 
 .maintitle {
 	color: black;
-}       
+}
+
+        }
 
 #hide, #h {
 	display: none;
@@ -171,19 +156,11 @@
 	align-items: center;
 }
 
-.btn-nav:hover {
+#left a:hover {
         color: #3498db;
+        text-decoration:overline;
         transition: 0.4s ease-in-out;
     }
-	
-
-.whiteNav:hover {
-	color: white;
-	opacity: 0.3;
-	transition: 0.6s ease-in-out;
-}
-	
-	
 
 .title {
 	float: left;
@@ -324,8 +301,6 @@ p {
 	transition: 0.5s;
 }
 
-
-
 .outline {
 	background: #fff;
 	border: none;
@@ -373,7 +348,7 @@ p {
 }
 
 img {
-	width: 70%
+	width: 100%
 }
 
 #wrapper {
@@ -403,7 +378,10 @@ img {
 	font-size: 2em;
 }
 
-
+.tar {
+    font-size: 1.5em;
+    padding: 0.3em;
+}
 
 
 @media only screen and (max-width: 70em) {
@@ -412,30 +390,23 @@ img {
    /* footer {
         margin-top: 13em;
     }*/
-    img {
-		width: 95%
-	}
-	
+    
     
 	.small {
 		width: 50vw;
 	}
-
 	#close {
 		display: block;
 	}
-
 	#align {
 		height: 10vw;
 	}
-
 	.maintitle {
 		font-family: "Roboto";
 		position: absolute;
 		z-index: 1;
 		color: black;
 	}
-
 	#left a {
 		font-size: 2em;
 	}
@@ -582,13 +553,15 @@ img {
          font-weight: 800;
     }
     
+   
+    
      #h {
         font-size: 6em;
         padding-right: 2em;
     }
     
     .tar {
-        font-size: 2em;
+        font-size: 3em;
         padding: 0.5em;
         margin-bottom: 3em;
         margin-top: 0;
@@ -606,10 +579,9 @@ img {
         padding: 0.5em;
     }
     
-	img {
-		width: 100%
-	}
-  
+    .desc {
+        padding-bottom: 1em;
+    }
     
 	.btn-nav {
 		font-size: 4em;
