--- a/beta/style/index-style.css
+++ b/beta/style/index-style.css
@@ -1,3 +1,17 @@
+.indexFooter {
+    margin-top: 8em;
+	padding-top: 0em;
+    
+}
+
+.indexFooter .footer-t {
+    color: white;
+}
+
+.indexFooter .footer-em {
+    color: white;
+}
+
 .boldLarge {
     display: flex;
     flex-wrap: wrap;
@@ -380,6 +394,24 @@ border-radius: 1em;
 }
 
 @media (max-device-width: 415px) {
+
+    .sm-a{
+        font-size: 3rem;
+        width: auto;
+    }
+
+    .boldLarge {
+        margin-top: 250px;
+    }
+
+    .appsWrapper {
+        margin-top: 800px;
+    }
+    
+    .floatingSectionWrapper p {
+        font-size: 3rem;
+        width: 500px;
+    }
 
     .boldLarge {
         display: flex;
