--- a/beta/style/index-style.css
+++ b/beta/style/index-style.css
@@ -162,7 +162,7 @@ border-radius: 1em;
     grid-template-columns: 1fr 1fr;
     /*border: 3px solid blue;*/
     margin-left: 10%;
-    width: 500px;
+   /* width: 500px;*/
 }
 
 .sm-a {
@@ -200,9 +200,13 @@ border-radius: 1em;
     display: grid;
     grid-template-columns: 1fr 1fr;
     /*border: 1px solid orange;*/
-    width: 500px;
+    width: 500px; /*CUPLRIT 1*/ 
+
+    /*floatDescription + floatingSection*/
     margin-left: 30px;
 }
+
+/*floatDescription BY ITSELF IS THE CULPRIT + .appWrapper*/
 
 .floatDescription img {
     grid-area: 1/1;
@@ -395,8 +399,30 @@ border-radius: 1em;
 
 @media (max-device-width: 415px) {
 
+
+    .floatContent .filipName {
+        font-size: 7rem;
+        margin-left: 0px;
+    }
+
+    .floatDescription p {
+        margin-left: 0px;
+    }
+    
+    /*
+    onTopFloat => FirstPage => AppsWrapper
+    FloatingSectionWrapper
+
+    S(".appsWrapper").style.display = "none"
+     S(".appsWrapper").style.display = "block"
+
+    S(".floatingSectionWrapper").style.display = "none";
+    S(".floatingSectionWrapper").style.display = "block";
+
+    */
+
     .sm-a{
-        font-size: 3rem;
+      /*  font-size: 3rem; */
         width: auto;
     }
 
@@ -409,14 +435,14 @@ border-radius: 1em;
     }
     
     .floatingSectionWrapper p {
-        font-size: 3rem;
-        width: 500px;
+       /* font-size: 3rem; */
+       /* width: 500px;*/
     }
 
     .boldLarge {
         display: flex;
         flex-wrap: wrap;
-        margin-left: 179px;
+       /* margin-left: 179px; */
     }
 
     .sidesImages img {
@@ -433,7 +459,7 @@ border-radius: 1em;
     }
 
     .arrow {
-        font-size: 3em;
+      /*  font-size: 3em; */
     }
 
 }
@@ -729,3 +755,46 @@ h3 {
         font-size: 1.8em;
     }
 }
+
+
+
+
+
+/*
+.appsWrapper {
+    display: none !important; LIKELY NO PROBLEM 
+}*/
+/*
+.floatDescription {
+    display: none !important;
+}*/
+
+
+.appsWrapper {
+    /*DOES NOT OFFSET PAGE IS OKAY !!! */
+   /* display: none !important; */
+}
+
+
+
+.floatingSectionWrapper {
+   /* display: none !important; */
+}
+
+/*.floatingSection {
+  width: 500px; 
+} 
+
+.floatContent {
+    display: none;
+}*/
+
+
+
+
+/*appsWrapper + .floatingSection {
+    width: 500px;
+    indexStyle.css 160
+} is BAD*/
+
+
