--- a/style/common.css
+++ b/style/common.css
@@ -4,49 +4,66 @@
 	font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
         
-#left a:hover {
-        color: #3498db;
-        text-decoration:overline;
-        transition: 0.4s ease-in-out;
-}
+
+
     
 .high {
     color: #3498db;
 }
-
 
 .tar {
  	display: block;
  	text-align: center;
  	text-decoration: none;
  	font-weight: bold;
- 	color: white;
- 	background: #3498db;
  	margin: 1em;
  	
  	width: 8em;
- 	border-radius: 0.5em;
  	margin-left: auto;
  	margin-right: auto;
+
+	 background-color: white;
+	 border: none;
+	 border-radius: 8px;
+	 font-size: 1em;
+	 padding: 0.6em;
  }
 
 .tar-small {
  	width: 6em;
-    background: none;
-    border: 3px solid #3498db;
-    color: #3498db;
+    color: #000000;
  }
+
+ .tar {
+    font-size: 1.5em;
+    padding: 0.3em;
+}
 
 
 .about {
-    color: black;
+	/*font-family: 'Poppins', sans-serif;*/
+	font-family: "Arial", sans-serif;
+    color: rgb(47, 186, 188);
     text-align: center;
-    background: linear-gradient(to bottom, #3498db, #0675bf);
-  /*  background: linear-gradient(45deg, #3498db, #);*/
-   
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size:7em;
+	text-align: left;
+	z-index: 0;
+	margin-left: -18px;
+
+	font-size: 8rem;
+
+	/*font-style: italic;
+	-webkit-text-stroke: 1px rgb(11, 122, 182);*/
+
+}
+
+
+/*Wrapper*/
+
+.aboutWrapper h2 {
+	font-family: 'Poppins';
+	font-style: italic;
+	-webkit-text-stroke: 2px rgb(11, 122, 182);
+	color: white;
 }
 
 #h {
@@ -54,7 +71,7 @@
 	border: none;
 	background: none !important;
 	font-size: 3em;
-	margin-left: 90vw;
+	
 	display: none;
 }
 
@@ -85,9 +102,7 @@
 
 .maintitle {
 	color: black;
-}
-
-        }
+}       
 
 #hide, #h {
 	display: none;
@@ -156,11 +171,19 @@
 	align-items: center;
 }
 
-#left a:hover {
+.btn-nav:hover {
         color: #3498db;
-        text-decoration:overline;
         transition: 0.4s ease-in-out;
     }
+	
+
+.whiteNav:hover {
+	color: white;
+	opacity: 0.3;
+	transition: 0.6s ease-in-out;
+}
+	
+	
 
 .title {
 	float: left;
@@ -301,6 +324,8 @@ p {
 	transition: 0.5s;
 }
 
+
+
 .outline {
 	background: #fff;
 	border: none;
@@ -348,7 +373,7 @@ p {
 }
 
 img {
-	width: 100%
+	width: 70%
 }
 
 #wrapper {
@@ -378,10 +403,7 @@ img {
 	font-size: 2em;
 }
 
-.tar {
-    font-size: 1.5em;
-    padding: 0.3em;
-}
+
 
 
 @media only screen and (max-width: 70em) {
@@ -390,23 +412,30 @@ img {
    /* footer {
         margin-top: 13em;
     }*/
-    
+    img {
+		width: 95%
+	}
+	
     
 	.small {
 		width: 50vw;
 	}
+
 	#close {
 		display: block;
 	}
+
 	#align {
 		height: 10vw;
 	}
+
 	.maintitle {
 		font-family: "Roboto";
 		position: absolute;
 		z-index: 1;
 		color: black;
 	}
+
 	#left a {
 		font-size: 2em;
 	}
@@ -553,15 +582,12 @@ img {
          font-weight: 800;
     }
     
-   
-    
      #h {
-        font-size: 6em;
         padding-right: 2em;
     }
     
     .tar {
-        font-size: 3em;
+        
         padding: 0.5em;
         margin-bottom: 3em;
         margin-top: 0;
@@ -579,9 +605,10 @@ img {
         padding: 0.5em;
     }
     
-    .desc {
-        padding-bottom: 1em;
-    }
+	img {
+		width: 100%
+	}
+  
     
 	.btn-nav {
 		font-size: 4em;
@@ -625,9 +652,7 @@ img {
 	ul li {
 		font-size: 2.6em;
 	}
-	#left>a {
-		font-size: 4em;
-	}
+	
 	#left>button {
 		font-size: 4em;
 	}
@@ -716,18 +741,23 @@ li {
 }
 
 
-
-
-
-        footer {
-	padding-top: 2.5em;
-	background: #ecf0f1;
+footer {
 	text-align: center;
+	padding-top: 10em;
 	padding-bottom: 10em;
+	color: white;
+	font-weight: bold;
+	font-size: 1em;
 }
 
+
+.footer-t, .footer-em {
+color: black;
+}
+
+
 #social {
-	background: #ecf0f1;
+	margin-top:2em;
 }
 
 #social img {
@@ -735,7 +765,6 @@ li {
 }
 
 .footer-t {
-	font-size: 2em;
 	font-weight: bold;
 }
 
