View transition API enabled
Requires Chrome 111

--- a/style/images.css
+++ b/style/images.css
@@ -1,4 +1,8 @@
 
+	#backImage-00 {
+		background-image: url(../images/nepal2022.png);
+	}
+	
 		#backImage-01 {
 			background-image: url(../images/antarctica.JPG);
 		}
