--- a/style/index-style.css
+++ b/style/index-style.css
@@ -20,7 +20,8 @@
 
 
 #hero {
-    margin-top: 50px;
+   /* margin-top: 50px;*/
+   margin-top: 120px;
 }
 
 
@@ -395,7 +396,8 @@ border-radius: 1em;
 
 
 .sh {
-    margin-top: 9rem;
+    margin-top: 25rem;
+   /* margin-top: 9rem;*/
 }
 
 .aboutMe {
@@ -508,6 +510,20 @@ margin-bottom: 5em; /*Danger line*/
     #hero .app2 {
     margin-left: 60%;
     margin-top: 20px;
+    }
+
+   
+
+    #hero .app1 {
+        width: 70px;
+    }
+
+    #hero .app2 {
+        width: 80px;
+    }
+
+    #hero .app3 {
+        width: 75px;
     }
    
 .newFilipName {
@@ -677,7 +693,7 @@ margin-bottom: 5em; /*Danger line*/
    
 
     .sh {
-        margin-top: 4rem;
+        margin-top: 17rem;
     }
     
     .side {
@@ -841,6 +857,16 @@ h3 {
         ENTILE
         
         RANK()*/
+
+        @media screen and (max-width: 1075px){
+           #hero .app3 {
+                margin-top: 10px;
+            }
+
+            #hero .app2 {
+                margin-top: 180px;
+            }
+        }
 
 
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) {
