--- a/style/sportStyle.css
+++ b/style/sportStyle.css
@@ -50,8 +50,8 @@
 		
 		.pb .time {
 			font-weight: bold;
-            -webkit-text-stroke: 2px rgb(11, 122, 182);
-    color: white;
+          /*  -webkit-text-stroke: 2px rgb(11, 122, 182);
+    color: white;*/
     font-style: italic;
 		}
 		
