--- a/style/common.css
+++ b/style/common.css
@@ -3,10 +3,30 @@
 	padding: 0;
 	font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
-    
+
+body {
+	background:#ecf0f1;
+}
+
 .high {
     color: #3498db;
 }
+
+
+#social {
+
+
+display: flex;
+    justify-content: center;
+}
+
+#ross {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*00:43:36 10/04/2023 done*/
 
 .tar {
  	display: block;
@@ -21,7 +41,7 @@
 
 	 background-color: white;
 	 border: 3px solid #3498DB;
-	 border-radius: 8px;
+	 border-radius: 3rem;
 	 font-size: 1em;
 	 padding: 0.6em;
  }
@@ -40,7 +60,9 @@
 .about {
 	/*font-family: 'Poppins', sans-serif;*/
 	font-family: "Arial", sans-serif;
-    color: rgb(47, 186, 188);
+   /* color: rgb(47, 186, 188);*/
+
+  color: #106a9b;
     text-align: center;
 	text-align: left;
 	z-index: 0;
@@ -68,14 +90,18 @@
 	color: white;
 }
 
-#h {
+.navControl {
 	font-weight: bold;
 	border: none;
 	background: none !important;
 	font-size: 3em;
+	text-decoration: none;
+    color: black;
 	
-	display: none;
+
 }
+
+
 
 .card-title h4 {
 	color: #3498db;
@@ -144,7 +170,7 @@
 }
 
 #align {
-	width: 100vw;
+	/*width: 100vw;*/
 	height: 10vw;
 	background: none;
 	padding: 0;
@@ -379,10 +405,10 @@ p {
 	text-align: center;
 	padding-top: 0.4em;
 }
-
+/*
 img {
 	width: 70%
-}
+}*/
 
 #wrapper {
 	display: grid;
@@ -417,12 +443,10 @@ img {
 @media only screen and (max-width: 70em) {
     
     
-   /* footer {
-        margin-top: 13em;
-    }*/
+/*
     img {
 		width: 95%
-	}
+	}*/
 	
     
 	.small {
@@ -437,6 +461,8 @@ img {
 		height: 10vw;
 	}
 
+
+	
 	.maintitle {
 		font-family: "Roboto";
 		position: absolute;
@@ -562,12 +588,23 @@ img {
 	}
     
 	#navback {
-		display: none;
+		
+		/*display: none;*/
+		/*transform: translate(0,-100%);*/
+		opacity: 0;
 		width: 100%;
-		height: 220em;
-		background: white;
+		height: 100vh;
+		/*background: rgb(188, 138, 46);*/
+
+		background: #ecf0f1;
 		z-index: 10;
 		position: relative;
+	}
+
+
+
+	#center-buttons #h {
+		visibility: visible;
 	}
     
    
@@ -700,8 +737,11 @@ img {
 
 
 html, body {
-	overflow-x: hidden;
+	/*overflow-x: hidden;*/
 }
+
+
+
 
 /*--------------------------------------------------NAVIGATION--------------------------------------------------*/
 
@@ -792,12 +832,18 @@ color: black;
 }
 
 
+#h {
+	display: block;
+}
 
+/*
 @media only screen and (max-width:70em) {
 	#h {
 		display: block;
 	}
 }
+*/
+
 
 /*
         @media only screen and (max-width:40em) {
